2005-02-24  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Make sure we can use ~luser when specifying
	linux-dir or --module-dir.

	* arch/i386/hal/hal.c (faults_read_proc): Add proc entry to
	display faults occurring in real-time mode. This is an attempt to
	provide more debugging info to chase spurious latencies induced by
	fault recovery.

2005-02-24 Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/timer.c (xntimer_set_sched): Remove superfluous check
	for timer remoteness.
	
2005-02-24  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_do_timers): Dequeue an elapsed timer
	before calling its handler, so that xntimer_stop() called on
	behalf of the latter won't attempt to stop it uselessly
	(e.g. xnpod_resume_thread()).
	(xntimer_do_timers): Update the reference time inside the inner
	processing loop for aperiodic support.

	* nucleus/shadow.c: Add support for switch back syscall mode,
	resetting the original exec mode for the caller after a switch has
	been made to process the syscall.

	* nucleus/pod.c: Move consistency checks to (OPT_DEBUG || SIM)
	sections.

2005-02-23  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* skins/rtai/registry.c (rt_registry_enter): Prevent from
	thundering herd effect while waking up several tasks which
	concurrently undergo a binding wait. This is done by selectively
	resuming them upon new object registration depending on the key
	they currently sleep on.

2005-02-23  Jan Kiszka <kiszka@rts.uni-hannover.de>

	* nucleus/module.c (sched_read_proc): Fix shifted timeout reports
	by using a stable time base.

2005-02-22  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/lib/fusion.c, skins/rtai/lib/task.c: Remove implicit
	mlockall() from task creation code.
	
	* testsuite: Add explicit mlockall() to user-space apps.

2005-02-21  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (xnarch_remap_page_range):
	Stop using deprecated remap_page_range() for kernels >= 2.6.10.
